@@ -17,6 +17,7 @@
 	* Added tx_solr_Search->getSolrConnection()
 	* Removed option markResultTypeBoundaries, replaced by native grouping in EXT:solrgrouping
 	* Added passing of whole objects/arrays in template loops
+	* Added a hook to modify a query's response
 
 2012-07-27  Ingo Renner  <ingo.renner@dkd.de>
 
